<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".OTP.ApplyActivity">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        >-->
    <data></data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_padding">

        <LinearLayout
            android:id="@+id/title_layout_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_apply_screen"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/green_dark"
                android:textSize="@dimen/title_textsize_apply_screen"
                android:textStyle="bold"/>
<!--                app:custFont="@string/app_font_regular" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powered_by_text"
                android:textColor="@color/black"
                android:textSize="10dp"/>
<!--                app:custFont="@string/app_font_regular" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle_margin_apply_screen"
                android:lineSpacingExtra="-15dp"
                android:text="@string/message_text_apply_screen"
                android:textColor="@color/black"
                android:textSize="@dimen/message_textsize_apply_screen"/>
<!--                app:custFont="@string/app_font_regular" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/apply_button"
                android:layout_below="@+id/title_layout_parent"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_padding"
                    android:gravity="center"
                    android:text="@string/apke_fayede_text"
                    android:textColor="@color/black"/>
<!--                    app:custFont="@string/app_font_regular" />-->

                <ImageButton
                    android:id="@+id/apke_fayde_more_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/normal_padding"
                    android:src="@drawable/down_arror" />
            </LinearLayout>

            <Button
                android:id="@+id/apply_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:background="@drawable/button_bg"
                android:text="@string/apply_button_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_apply_screen"/>
<!--                app:custFont="@string/app_font_regular" />-->
        </LinearLayout>
    </RelativeLayout>
    <!--    </ScrollView>-->
</layout>